# dapr-demo-app

./: .env.example  .gitignore  CLAUDE.md  MISSION.md  README.md  dapr.yaml  pyproject.toml
app/: config.py  dependencies.py  main.py
app/api/routers/: __init__.py  chat.py  tools.py
app/core/: protocols.py  validation.py
app/core/models/: __init__.py  chat.py  result.py  tool.py
app/core/services/: __init__.py  agent.py  agent_plugin_manager.py  chat_service.py  openapi_plugin.py  tool_service.py
app/infrastructure/repositories/: __init__.py  session_repository.py  session_repository_dapr.py  session_repository_sqlite.py  tool_repository.py
resources/: statestore.yaml
tests/core/: test_protocols.py  test_validation.py
tests/core/models/: test_chat.py  test_result.py  test_tool.py
tests/core/services/: test_agent_plugin_manager.py  test_agent_tools_integration.py  test_chat_service.py  test_openapi_plugin.py  test_openapi_plugin_sk_integration.py  test_semantic_kernel_agent.py  test_tool_service.py
tests/infrastructure/repositories/: test_session_repository.py  test_tool_repository.py
tests/integration/: test_api_chat.py  test_api_tools.py  test_openai_integration.py
